# cs_parallel_computing

./: .gitignore
cuda/: vectorSquare.cu
cuda/learning_tutorials/: hello_world.cu
cuda/sorting/: merge_sort.cu
cuda/sorting/radixsort/: test_cpu.cpp  test_gpu.cu  timer.h
cuda/vectorsum/: cuda_vectorsum.cu  cuda_vectorsum.h  main.cpp  vectorsum.cu
mpi/: Node1  Node1.pub  gregor  gregor.pub  hello_world.cpp  matrix_vector_allgather.cpp  pi.cpp  pi_reduce.cpp  quicksort.cpp  vector_sum.cpp  vector_sum_scatter.cpp
opencl/: hello_array.cpp  hello_multi_array.cpp  hello_multi_array_kernel.cl  hello_numerical_reduction.cpp  hello_world.cpp  hello_world_kernel.cl  kernel_numerical_reduction.cl
opencl/learning_tutorials/c/: hello_numerical_reduction.c  hello_world.c  utils.h
opencl/learning_tutorials/cl/: hello_array_kernel.cl  hello_world_kernel.cl
opencl/learning_tutorials/cpp/: hello_array.cpp  hello_multi_array.cpp  hello_numerical_reduction.cpp  hello_world.cpp  utils.h
opencl/learning_tutorials/python/: hello_array.py  hello_numerical_reduction.py
openmp/: convolution.cpp  convolution_2.cpp  heat_2d_plate.cpp  helloworld.cpp  merge_sort.cpp  odd_even_transposition.cpp  pi.cpp  pi_estimate.cpp  pi_montecarlo.cpp
openmp/hw/: README.md  convolution.cpp
pthreads/: CMakeLists.txt  matrix_vector_multiplication.cpp  merge_sort.cpp  merge_sort_mp.cpp  merge_sort_parallel.cpp  pi.cpp  quicksort.cpp
